src/snapshots/zeek_language_server__ast__test__typ_builtin-6.snap
---
source: src/ast.rs
expression: "(line,\ncrate::ast::resolve(&db.0,\nNodeLocation::from_range(uri,\nRange::new(pos, pos))).and_then(|d| crate::ast::typ(&db.0, d)))"
---
(
    "            global he = 0x1234;",
    Some(
        Decl {
            module: Global,
            id: u!("count"),
            fqid: u!("count"),
            kind: Builtin(
                Count,
            ),
            is_export: None,
            loc: None,
            documentation: u!("Builtin type 'count'"),
        },
    ),
)
