src/snapshots/zeek_language_server__ast__test__typ_builtin-7.snap
---
source: src/ast.rs
expression: "db.resolve(NodeLocation::from_range(uri.clone(),\n            Range::new(pos, pos))).and_then(|d| db.typ(d))"
---
Some(
    Decl {
        module: Global,
        id: "<port>",
        fqid: "<port>",
        kind: Type(
            [],
        ),
        is_export: None,
        loc: None,
        documentation: "Builtin type '<port>'",
    },
)
