src/snapshots/zeek_language_server__ast__test__typ_builtin-8.snap
---
source: src/ast.rs
expression: "(line,\ncrate::ast::resolve(&db.0,\nNodeLocation::from_range(uri,\nRange::new(pos, pos))).and_then(|d| crate::ast::typ(&db.0, d)))"
---
(
    "            global p = 8080/tcp;",
    Some(
        Decl {
            module: Global,
            id: u!("port"),
            fqid: u!("port"),
            kind: Builtin(
                Port,
            ),
            is_export: None,
            loc: None,
            documentation: u!("Builtin type 'port'"),
        },
    ),
)
