src/snapshots/zeek_language_server__ast__test__typ_builtin-9.snap
---
source: src/ast.rs
expression: "(line,\ncrate::ast::resolve(&db.0,\nNodeLocation::from_range(uri,\nRange::new(pos, pos))).and_then(|d| crate::ast::typ(&db.0, d)))"
---
(
    "            global i3 = 10 mins;",
    Some(
        Decl {
            module: Global,
            id: u!("interval"),
            fqid: u!("interval"),
            kind: Builtin(
                Interval,
            ),
            is_export: None,
            loc: None,
            documentation: u!("Builtin type 'interval'"),
        },
    ),
)
