src/snapshots/zeek_language_server__ast__test__typ_cast.snap
---
source: src/ast.rs
expression: "crate::ast::resolve(&db.0,\nNodeLocation::from_node(uri, x)).and_then(|d| crate::ast::typ(&db.0, d))"
---
Some(
    Decl {
        module: Global,
        id: u!("string"),
        fqid: u!("string"),
        kind: Builtin(
            String,
        ),
        is_export: None,
        loc: None,
        documentation: u!("Builtin type 'string'"),
    },
)
