src/snapshots/zeek_language_server__ast__test__typ_const_decl-2.snap
---
source: src/ast.rs
expression: "crate::ast::resolve(&db.0,\nNodeLocation::from_node(uri, b)).and_then(|d| crate::ast::typ(&db.0, d))"
---
Some(
    Decl {
        module: Global,
        id: u!("<integer>"),
        fqid: u!("<integer>"),
        kind: Builtin(
            Id(
                u!("<integer>"),
            ),
        ),
        is_export: None,
        loc: None,
        documentation: u!("Builtin type '<integer>'"),
    },
)
