src/snapshots/zeek_language_server__ast__test__typ_explicit-2.snap
---
source: src/ast.rs
expression: "crate::ast::resolve(&db.0,\nNodeLocation::from_node(uri, x)).and_then(|d| crate::ast::typ(&db.0, d))"
---
Some(
    Decl {
        module: None,
        id: u!("X"),
        fqid: u!("X"),
        kind: Type(
            [],
        ),
        is_export: Some(
            false,
        ),
        loc: Some(
            Location {
                range: Range {
                    start: Position {
                        line: 3,
                        character: 12,
                    },
                    end: Position {
                        line: 3,
                        character: 30,
                    },
                },
                selection_range: Range {
                    start: Position {
                        line: 3,
                        character: 17,
                    },
                    end: Position {
                        line: 3,
                        character: 18,
                    },
                },
                uri: InternedUri(Id(_)),
            },
        ),
        documentation: u!("```zeek\ntype X: record {};\n```"),
    },
)
