src/snapshots/zeek_language_server__ast__test__typ_explicit.snap
---
source: src/ast.rs
expression: "crate::ast::resolve(&db.0,\nNodeLocation::from_node(uri, a)).and_then(|d| crate::ast::typ(&db.0, d))"
---
Some(
    Decl {
        module: Global,
        id: u!("count"),
        fqid: u!("count"),
        kind: Builtin(
            Count,
        ),
        is_export: None,
        loc: None,
        documentation: u!("Builtin type 'count'"),
    },
)
