src/snapshots/zeek_language_server__ast__test__typ_var_decl-2.snap
---
source: src/ast.rs
expression: db.typ(decl)
---
Some(
    Decl {
        module: None,
        id: "B",
        fqid: "B",
        kind: Type(
            [
                Decl {
                    module: None,
                    id: "i",
                    fqid: "B::i",
                    kind: Field,
                    is_export: None,
                    loc: Some(
                        Location {
                            range: Range {
                                start: Position {
                                    line: 2,
                                    character: 16,
                                },
                                end: Position {
                                    line: 2,
                                    character: 17,
                                },
                            },
                            selection_range: Range {
                                start: Position {
                                    line: 2,
                                    character: 16,
                                },
                                end: Position {
                                    line: 2,
                                    character: 17,
                                },
                            },
                            uri: Url {
                                scheme: "file",
                                cannot_be_a_base: false,
                                username: "",
                                password: None,
                                host: None,
                                port: None,
                                path: "/x.zeek",
                                query: None,
                                fragment: None,
                            },
                        },
                    ),
                    documentation: "```zeek\n# In B\ni: count;\n```",
                },
            ],
        ),
        is_export: Some(
            false,
        ),
        loc: Some(
            Location {
                range: Range {
                    start: Position {
                        line: 1,
                        character: 12,
                    },
                    end: Position {
                        line: 3,
                        character: 14,
                    },
                },
                selection_range: Range {
                    start: Position {
                        line: 1,
                        character: 17,
                    },
                    end: Position {
                        line: 1,
                        character: 18,
                    },
                },
                uri: Url {
                    scheme: "file",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: None,
                    port: None,
                    path: "/x.zeek",
                    query: None,
                    fragment: None,
                },
            },
        ),
        documentation: "```zeek\ntype B: record {\n                i: count;\n            };\n```",
    },
)
